Fix ide warning